Fix overlapping issue

--- a/css/main.css
+++ b/css/main.css
@@ -98,7 +98,7 @@ nav ul li {
   left: 0;
   right: 0;
   z-index: -1;
-  height: 100%;
+  height: 98%;
   width: 100%;
   background: Sienna;
   color: black;
